--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
     "resend": "^3.2.0"
