--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.3",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
